--- a/libs/dashboard/src/lib/dashboard.component.html
+++ b/libs/dashboard/src/lib/dashboard.component.html
@@ -17,16 +17,16 @@
                                                       cardTitle='Total App Downloads'
                                                       icon='file_download'></hidden-innovation-dashboard-count-card>
             </div>
-<!--            <div class='col-md-12 col-lg-4 mt-lg-0 mt-3'>-->
-<!--              <mat-card class='bg-light h-100' style='padding: 10px 10px 0 10px'>-->
-<!--                <div class='container-fluid p-0'>-->
-<!--                  <div class='row'>-->
-<!--                    <div class='col-12 '>-->
-<!--                      <hidden-innovation-common-form-field-date-->
+            <div class='col-md-12 col-lg-4 mt-lg-0 mt-3'>
+              <mat-card class='bg-light h-100' style='padding: 10px 10px 0 10px'>
+                <div class='container-fluid p-0'>
+                  <div class='row'>
+                    <div class='col-12 '>
+                      <hidden-innovation-common-form-field-date
 
-<!--                        [maxDate]='maxDate'-->
-<!--                        endControlPath='end'-->
-<!--                        startControlPath='start'></hidden-innovation-common-form-field-date>-->
+                        [maxDate]='maxDate'
+                        endControlPath='end'
+                        startControlPath='start'></hidden-innovation-common-form-field-date>
 <!--                                            <hidden-innovation-common-form-field-month-->
 <!--                                              *ngIf='rangeFilterGroup.value.type === dashboardRangeFilterEnum.MONTHLY'-->
 <!--                                              [maxDate]='maxDate'-->
@@ -36,7 +36,7 @@
 <!--                                              [maxDate]='maxDate'-->
 <!--                                              endControlPath='end'-->
 <!--                                              startControlPath='start'></hidden-innovation-common-form-field-week>-->
-<!--                    </div>-->
+                    </div>
 <!--                                        <div class='col-6'>-->
 <!--                                          <mat-form-field class='w-100'>-->
 <!--                                            <mat-label>Range Filter</mat-label>-->
@@ -47,23 +47,23 @@
 <!--                                            </mat-select>-->
 <!--                                          </mat-form-field>-->
 <!--                                        </div>-->
-<!--                  </div>-->
-<!--                </div>-->
-<!--              </mat-card>-->
-<!--            </div>-->
+                  </div>
+                </div>
+              </mat-card>
+            </div>
           </form>
           <div class='row mb-4'>
-            <div class='col-lg-12 col-md-12 mt-lg-0 mt-3 mb-5 d-flex'>
-              <div class='row w-100'>
+            <div class='col-lg-6 col-md-12 mt-lg-0 mt-3 mb-2 '>
+              <div class='w-100'>
                 <mat-card class='col-lg-12 mat-card' >
                   <mat-card-content >
 
-                    <div class='d-flex justify-content-end'>
-                      <mat-button-toggle-group appearance="standard" name="fontStyle" aria-label="Font Style">
-                        <mat-button-toggle (click)='showRegisteredUserData(dashboardRangeFilterEnum.MONTHLY)'><mat-icon class='mr-2'>calendar_month</mat-icon> {{"Monthly"}}</mat-button-toggle>
-                        <mat-button-toggle [checked]='true'  (click)='showRegisteredUserData(dashboardRangeFilterEnum.WEEKLY)' > <mat-icon class='mr-2'>calendar_view_week</mat-icon> {{"Weekly"}}</mat-button-toggle>
-                      </mat-button-toggle-group>
-                    </div>
+<!--                    <div class='d-flex justify-content-end'>-->
+<!--                      <mat-button-toggle-group appearance="standard" name="fontStyle" aria-label="Font Style">-->
+<!--                        <mat-button-toggle (click)='showRegisteredUserData(dashboardRangeFilterEnum.MONTHLY)'><mat-icon class='mr-2'>calendar_month</mat-icon> {{"Monthly"}}</mat-button-toggle>-->
+<!--                        <mat-button-toggle [checked]='true'  (click)='showRegisteredUserData(dashboardRangeFilterEnum.WEEKLY)' > <mat-icon class='mr-2'>calendar_view_week</mat-icon> {{"Weekly"}}</mat-button-toggle>-->
+<!--                      </mat-button-toggle-group>-->
+<!--                    </div>-->
 
                   <hidden-innovation-line-chart
                     [chartData]='$any(store.registeredUsersData$ | async)'
@@ -100,17 +100,17 @@
 <!--                </div>-->
               </div>
             </div>
-            <div class='col-lg-12 col-md-12 mt-lg-0 mt-3 mb-3'>
-              <div class='row w-100'>
+            <div class='col-lg-6 col-md-12 mt-lg-0 mt-3 mb-2 '>
+              <div class='w-100'>
                 <mat-card class='col-lg-12'>
                   <mat-card-content>
-                    <div class='d-flex justify-content-end'>
-                      <mat-button-toggle-group appearance="standard" name="fontStyle" aria-label="Font Style">
-                        <mat-button-toggle (click)='showActiveUserData(dashboardRangeFilterEnum.MONTHLY)'><mat-icon class='mr-2'>calendar_month</mat-icon> {{"Monthly"}}</mat-button-toggle>
-                        <mat-button-toggle [checked]='true'  (click)='showActiveUserData(dashboardRangeFilterEnum.WEEKLY)' > <mat-icon class='mr-2'>calendar_view_week</mat-icon> {{"Weekly"}}</mat-button-toggle>
-                      </mat-button-toggle-group>
+<!--                    <div class='d-flex justify-content-end'>-->
+<!--                      <mat-button-toggle-group appearance="standard" name="fontStyle" aria-label="Font Style">-->
+<!--                        <mat-button-toggle (click)='showActiveUserData(dashboardRangeFilterEnum.MONTHLY)'><mat-icon class='mr-2'>calendar_month</mat-icon> {{"Monthly"}}</mat-button-toggle>-->
+<!--                        <mat-button-toggle [checked]='true'  (click)='showActiveUserData(dashboardRangeFilterEnum.WEEKLY)' > <mat-icon class='mr-2'>calendar_view_week</mat-icon> {{"Weekly"}}</mat-button-toggle>-->
+<!--                      </mat-button-toggle-group>-->
 
-                    </div>
+<!--                    </div>-->
                     <hidden-innovation-line-chart
                       [chartData]='$any(store.activeUserData$ | async)'
                       [chartLabels]='$any(store.activeUserLabel$ | async)'
@@ -144,7 +144,6 @@
 <!--                  </mat-card>-->
 <!--                </div>-->
               </div>
-
             </div>
           </div>
         </div>
