--- a/libs/goals/create-goals/src/lib/create-goals.component.html
+++ b/libs/goals/create-goals/src/lib/create-goals.component.html
@@ -3,7 +3,7 @@
     <div class='row mb-4'>
       <div class='col-12 d-flex align-items-center justify-content-end'>
         <button
-          [routerLink]="['/goals']" class='ml-3'
+          [routerLink]="['/dashboard']" class='ml-3'
           mat-stroked-button
           type='button'>
           Cancel
@@ -79,7 +79,7 @@
       <div class='col-lg-6 col-12'>
         <mat-card>
           <mat-card-title class='d-flex justify-content-between align-items-center'>
-            <h3 class='mat-h3 mb-0 font-sf-pro'>Contents</h3>
+            <h3 class='mat-h3 mb-0 font-sf-pro'>Goals</h3>
             <button
               class='ml-3'
               color='primary' mat-flat-button type='button'>
@@ -88,6 +88,34 @@
 
           </mat-card-title>
           <mat-divider></mat-divider>
+          <ng-template ngFor let-i='index'>
+            <div class='row ' >
+              <div class='col-12'>
+                <mat-card class='mat-elevation-z1'>
+                  <div class='answersGrid'>
+                    <hidden-innovation-common-form-field-number
+                      [errorMessage]='formValidationService.pointsValidationMessage'
+                      controlPath='point'
+                    ></hidden-innovation-common-form-field-number>
+                    <hidden-innovation-common-form-field
+                      label='Answer {{i + 1}}'
+                      controlPath='name'
+                    ></hidden-innovation-common-form-field>
+                    <button type='button' mat-icon-button color='warn' >
+                      <mat-icon>delete</mat-icon>
+                    </button>
+                    <ng-template>
+                      <div></div>
+                      <hidden-innovation-common-form-field
+                        label='Font Awesome Icon 6 Code'
+                        controlPath='iconName'
+                      ></hidden-innovation-common-form-field>
+                    </ng-template>
+                  </div>
+                </mat-card>
+              </div>
+            </div>
+          </ng-template>
         </mat-card>
       </div>
     </div>
